redesign the <about me> and <my blog> part

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
     <!-- 个人介绍部分 -->
     <section id="about" class="section about-section">
+        <div class="meteor-shower"></div>
         <div class="about-container">
             <div class="about-content">
                 <h2>关于我</h2>
@@ -84,6 +85,7 @@
 
     <!-- 博客区域 -->
     <section id="blog" class="section">
+        <div class="meteor-shower"></div>
         <h2>最新博客</h2>
         <div class="blog-grid">
             <article class="blog-card">
